Corrige input do nome

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Alimentador terrível</h1>
   <form action="http://terrivel.herokuapp.com/monster/" method="GET">
-    <label>Nome: <input name="nome" pattern="[A-Za-z]{0,}"></input></label><br>
+    <label>Nome: <input name="nome" pattern="[A-Za-zç]{0,}"></input></label><br>
     <label>Número de pedras: <input name="num_pedras"type="number" step="1" min="0" value="3"></label><br>
     <label>Tamanho das pedras: <input name="tam_pedras"type="number" step="0.5" min="1" max="7"></label><br>
     <label>Cor1: <input name="corCeu1" type="color"></input></label><br>
